<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Muggle</string>


    <!-- navigation drawer -->
    <!-- navigation drawer item -->
    <string name="drawer_item_sync">同步</string>
    <string name="drawer_item_theme">主题</string>
    <string name="drawer_item_help">帮助</string>
    <string name="drawer_item_settings">设置</string>
    <!-- navigation drawer item -->

    <!-- dialog -->
    <string name="dialog_message_alert_user">抱歉，暂时不支持同步</string>
    <!-- navigation drawer -->


    <!-- cancel and ok -->
    <string name="cancel">取消</string>
    <string name="ok">确定</string>

    <!-- drawer toggle -->
    <string name="toggle_drawer_open">Open Drawer</string>
    <string name="toggle_drawer_close">Close Drawer</string>


    <!-- file list fragment -->
    <string name="toast_message_sdcard_unavailable">SD card不可用</string>
    <string name="list_empty">没有找到任何文件\n点击右下角按钮新建文件</string>

    <!-- menu -->
    <string name="menu_item_search">搜索</string>

    <!-- sort options -->
    <string name="menu_item_sort">排序</string>
    <string name="choice_item_create_time_sort">按创建时间</string>
    <string name="choice_item_modify_time_sort">按修改时间</string>
    <string name="choice_item_title_sort">按标题</string>

    <!-- show options -->
    <string name="menu_item_display_option">查看选项</string>
    <string name="choice_item_file_ext">文件后缀</string>
    <string name="choice_item_file_size">文件大小</string>

    <!-- search hint -->
    <string name="search_hint">搜索文件</string>

    <!-- action mode menu -->
    <string name="action_mode_menu_item_select_all">全选</string>
    <string name="action_mode_menu_item_delete">删除</string>
    <string name="dialog_message_delete_files_confirm">要删除选中的文件吗？</string>
    <!-- file list fragment -->


    <!-- edit fragment -->
    <!-- menu text -->
    <string name="menu_item_undo">撤销</string>
    <string name="menu_item_redo">恢复</string>
    <string name="menu_item_preview">预览</string>
    <string name="menu_item_save">保存</string>
    <string name="menu_item_rename">重命名</string>
    <string name="menu_item_delete">删除</string>
    <string name="menu_item_download">下载</string>
    <string name="menu_item_clear_all">清除所有</string>
    <string name="menu_item_docs">Markdown 语法</string>
    <string name="menu_item_statistics">统计</string>
    <string name="menu_item_edit">编辑</string>

    <string name="toast_message_deleted">已删除</string>
    <string name="toast_message_delete_error">文件删除失败</string>
    <string name="toast_message_cleared">内容已清除</string>

    <!-- edit fragment toolbar menu item dialog -->
    <!-- save file -->
    <string name="dialog_title_save_file">保存文件</string>
    <string name="dialog_et_hint_file_name">文件名</string>
    <string name="dialog_tv_file_extension">.md</string>
    <string name="dialog_btn_save">保存</string>
    <string name="dialog_btn_discard">丢弃</string>

    <!-- rename file -->
    <string name="dialog_title_rename_file">重命名</string>
    <string name="dialog_et_hint_new_file_name">新的文件名</string>
    <string name="dialog_btn_rename">重命名</string>

    <!-- clear all -->
    <string name="toast_content_empty">内容为空</string>
    <string name="dialog_message_clear_all">确定要清除所有内容吗？</string>

    <!-- markdown docs fragment toolbar title -->
    <string name="docs_fragment_tb_title">Markdown 语法手册</string>

    <!-- statistics -->
    <string name="dialog_title_statistics">统计信息</string>
    <string name="dialog_tv_bold_text">总字符数</string>
    <string name="dialog_tv_char_count">10</string>
    <string name="dialog_tv_char_unit">个字符</string>

    <!-- editor toolbar dialog -->
    <string name="dialog_btn_insert">插入</string>

    <!-- insert link -->
    <string name="dialog_title_insert_link">插入链接</string>
    <string name="dialog_et_hint_link_display_text">显示文本（默认：Link）</string>
    <string name="dialog_et_hint_link_content">链接</string>

    <!-- insert image -->
    <string name="dialog_item_text_local_image">本地图片</string>
    <string name="dialog_item_text_internet_image">网络图片</string>
    <string name="dialog_title_insert_image">插入图片</string>
    <string name="dialog_et_hint_image_display_text">显示文本（默认：Image）</string>
    <string name="dialog_et_hint_image_uri">图片链接</string>

    <!-- insert block code -->
    <string name="editor_dialog_title_insert_block_code">插入代码块</string>
    <string name="dialog_et_hint_language_name">编程语言名称</string>

    <!-- dialog toast -->
    <string name="toast_saved">已保存</string>
    <string name="toast_failed_saved">保存失败，请稍后重试！</string>
    <string name="toast_does_not_select">没有选择图片</string>
    <string name="toast_file_name_can_not_empty">文件名不能为空</string>
    <string name="toast_file_name_exists">文件名已存在，请重新输入</string>
    <!-- edit fragment -->


    <!-- preference -->
    <!-- preference key -->
    <string name="pref_key_language" translatable="false">language</string>
    <string name="pref_key_custom_editor" translatable="false">custom_editor</string>
    <string name="pref_key_sync" translatable="false">sync</string>
    <string name="pref_key_network" translatable="false">network</string>
    <string name="pref_key_feedback" translatable="false">feedback</string>
    <string name="pref_key_bug_report" translatable="false">bug_report</string>
    <string name="pref_key_rating" translatable="false">rating</string>
    <string name="pref_key_check_update" translatable="false">check_update</string>
    <string name="pref_key_about" translatable="false">about</string>

    <!--preference title and summary-->
    <string name="category_title_display">显示</string>
    <string name="category_title_editor">编辑器</string>
    <string name="category_title_storage_sync">同步</string>
    <string name="category_title_feedback">使用反馈</string>
    <string name="category_title_others">其它</string>

    <string name="pref_summary_default">默认</string>
    <string name="pref_title_language">语言</string>
    <string name="pref_summary_language">跟随系统</string>
    <string name="pref_title_custom_editor">自定义工具栏</string>
    <string name="pref_title_sync">同步</string>
    <string name="pref_summary_sync">自动同步</string>
    <string name="pref_title_wifi_sync">仅在WIFI下同步</string>
    <string name="pref_summary_wifi_sync">使用WIFI</string>
    <string name="pref_summary_4g_sync">使用4G/3G/2G</string>
    <string name="pref_title_feedback">意见反馈</string>
    <string name="pref_title_bug_report">错误报告</string>
    <string name="pref_title_rate">应用评分</string>
    <string name="pref_title_check_update">检查更新</string>
    <string name="pref_summary_current_version">当前版本 v1.0</string>
    <string name="pref_title_about">关于</string>

    <string name="issue_page" translatable="false">https://github.com/jixiaoyong/Muggle/issues</string>

    <!-- language list preference item text -->
    <string name="pref_array_item_auto">跟随系统</string>
    <string name="pref_array_item_english">英文</string>
    <string name="pref_array_item_chinese_s">简体中文</string>
    <string name="pref_array_item_chinese_t">繁体中文</string>

    <!-- sync list preference item text -->
    <string name="pref_array_item_sync_auto">自动同步</string>
    <string name="pref_array_item_sync_remind">提醒同步</string>
    <string name="pref_array_item_sync_manual">手动同步</string>

    <!--about fragment-->
    <string name="app_describe">开源的Markdown编辑器</string>
    <string name="app_describe_addon" translatable="false">\nBase on <b>Mua</b>( https://github.com/zeleven/mua )</string>

    <string name="app_version_text">当前版本</string>
    <string name="app_version_number" translatable="false">1.0</string>
    <string name="project_link">APP官网</string>
    <string name="contact_me">联系作者</string>
    <string name="bottom_text" translatable="false">Under MIT license.</string>
    <!-- about fragment bottom sheet menu -->
    <string name="menu_item_title_email">邮件</string>
    <string name="menu_item_title_github">GitHub</string>
    <string name="menu_item_title_web">官网</string>
    <!-- preference -->


    <!--test content-->
    <string name="test_long_title" translatable="false">这是一个标题，一个非常长的标题，长到看不到尽头，真的特别长，后面的根本看不到，后面还有很多内容你根本就看不到的，不信再看</string>
    <string name="test_long_content" translatable="false">这是一段文章摘要，一段非常长的文章摘要，一样是长到没有尽头，到底是有多长呢，你继续往后看就知道有多长了，我不知道写什么了，就这样看看可不可以吧，要是不可以那就再长一点</string>

    <string name="no_write_sdcard_permission">请给予存储权限，否则无法保存文件</string>

    <string name="invalid_url">网址错误</string>
    <string name="use_custom_tabs_tips">如果您想直接在外部浏览器中打开，您可以在设置改变。</string>
    <string name="share">分享</string>
    <string name="copy_url">复制链接</string>
    <string name="no_browser_clients">未安装浏览器客户端</string>
    <string name="choose_repo_to_sync">请选择你要同步的仓库</string>

    <string name="file_only_local">本地的文件</string>
    <string name="file_download">下载的文件</string>


    <string name="upload_success">上传成功</string>
    <string name="download_success">下载成功</string>
    <string name="delete_success">删除成功</string>
    <string name="upgrade_success">更新成功</string>
    <string name="create_success">创建成功</string>

    <string name="delete_local_tips">只会删除本地的文件</string>
    <string name="delete_cloud_tips">只会删除在线的文件</string>
    <string name="select_the_repo">请选择你要使用的仓库</string>
    <string name="logout">退出</string>
    <string name="change_repo">切换仓库</string>
    <string name="click_to_login_github">登录GitHub</string>
    <string name="login_via_web_tips">为了避免泄露您的账号密码，请选择可信任的浏览器登录。\n\n请在打开的页面中授权Muggle访问您的Github仓库，以便读取、存储您的文件。</string>
    <string name="dialog_message_download_files_confirm">确认下载吗</string>
    <string name="download_and_overwritte_tips">下载在线文件会覆盖本地已有文件内容哦</string>
    <string name="change_theme_sorry_tips">还在开发中，不要着急哦~</string>

</resources>
