<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>



    </data>

    <com.flipboard.bottomsheet.BottomSheetLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/app_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp">

                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/app_name"
                        android:textColor="@android:color/black"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/app_describe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/app_name"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:autoLink="web"
                        android:text="@string/app_describe"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/app_describe_addon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/app_describe"
                        android:layout_centerHorizontal="true"
                        android:autoLink="web"
                        android:text="@string/app_describe_addon"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/app_detail"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/app_version_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_version_text"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/app_version_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/app_version_number"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/license"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <Button
                        android:id="@+id/project_page_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/about_btn"
                        android:text="@string/project_link"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/contact_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/about_btn"
                        android:text="@string/contact_me"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/license"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/bottom_text" />

            </RelativeLayout>

        </LinearLayout>

    </com.flipboard.bottomsheet.BottomSheetLayout>

</layout>
