<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/splash_layout">
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        android:layout_centerInParent="true"/>

    <RelativeLayout
        android:id="@+id/app_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/app_describe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_describe"
            android:textAlignment="center"
            android:autoLink="web"
            android:textSize="14sp"
            android:layout_below="@+id/app_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/app_describe_addon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_describe_addon"
            android:textAlignment="center"
            android:textStyle="italic"
            android:autoLink="web"
            android:textSize="12sp"
            android:layout_below="@+id/app_describe"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</RelativeLayout>